Events: add from Akin

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -210,7 +210,7 @@ Ditto's August achievements:
 * Coordinated tweetstorms and community outreach around privacy news.
 * Secured 2 more additional podcast interviews slated to come out in the next few weeks.
 * Secured an in-depth profile of project lead @jy-p in Decrypt Media.
-* Secured publication of @akin's interview on the [Base Layer Podcast](https://acrabaselayer.podbean.com/e/base-layer-episode-059-akin-sawyerr-decred/).
+* Secured publication of @Akin's interview on the [Base Layer Podcast](https://acrabaselayer.podbean.com/e/base-layer-episode-059-akin-sawyerr-decred/).
 * Secured Crypto Briefing [article](https://cryptobriefing.com/decentralized-governance-in-action-decred-debates-market-liquidity/) on market maker proposals.
 * Completed [messaging](https://github.com/decredcommunity/pr/blob/release/foundational-messaging.md) refresh.
 * Wrote and submitted a proposal for @matheusd to speak at The Lightning Conference Berlin
@@ -238,12 +238,14 @@ Upcoming:
 
 * Sep 10 - [BlockDAM Co-working Tuesdays](https://twitter.com/NoahPierau/status/1170198038301855745) - Amsterdam, Netherlands. @Haon will be presenting a talk on cryptocurrency privacy tech and the new privacy features of Decred.
 * Sep 16 - [Decred Special Interest Group](https://www.meetup.com/Philadelphia-Technology-for-Blockchain-and-Cryptocurrency/events/hmqlhryzmbvb/) - Philadelphia, USA. Organized by [@mikeghen](https://twitter.com/mikeghen/status/1156618858066788354). { still planned, anybody knows it? }
+* Sep 20 - [A Framework for Blockchain Governance](https://www.eventbrite.com/e/a-framework-for-blockchain-governance-tickets-70134180221) - Washington DC, USA. Along with Thomas Cox, the Chief Governance Officer of [StrongBlock](https://strongblock.io/), @Akin be speaking on and taking questions on a Blockchain Governance Framework developed the Wharton Crypto Governance roundtable group of which he is a member.
 * Sep 21 - [French Vibes Connection](https://twitter.com/Decred_ES/status/1160669435989856256) - Mexico City, Mexico. Decred will host a music concert in Mexico City with Telepopmusik, Cherokee and Else. Brand awareness experiment by @elian.
 * Sep 21 - [Decred Meetup](https://twitter.com/DecredArabia/status/1171117988461854721) - Casablanca, Morocco. @arij will be talking about her experience as a Decred contractor, Decred's governance and privacy and future plans.
 * Sep 24 - [La Conexion Conference](https://la-conexion.com/home/) - Buenos Aires, Argentina. The project will be presented in main stage.
 * Sep 26 - [Inaugural Decred Meetup](https://twitter.com/MattDavidKaye/status/1164974520081342464) - Los Angeles, USA. Blockhead Capital and @jy-p will talk about fundamentals behind Decred.
 * Sep 27 - [Crypto Fest](https://argentinacryptofest.com/) in Cordoba, Argentina. The project will be presented in main stage.
 * Sep 30 - Oct 1 - [Voice of Blockchain](https://twitter.com/BlockchainVoice/status/1154772731575099392) - Chicago, USA. @jy-p will present a keynote "Why Direct Sovereignty & Multi-Stakeholder Inclusive Governance Will Last".
+* Oct 29-31 - [World Crypto Conference](https://worldcryptocon.com/) - Las Vegas, USA. @Akin will be speaking on a panel on "Governance Practices" and will have an opportunity to highlight the Decred governance model and process.
 * Nov 4-7 - [Web Summit](https://websummit.com/) - Lisbon, Portugal. Decred will have a booth. { any new details? }
 
 Alex Von Schulze is [looking](https://twitter.com/avonschulze/status/1166026265805172737 ) for people to organize the first Decred [meetup](https://www.meetup.com/Decred-KC/) in Kansas City, USA.
@@ -391,6 +393,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-* writing and editing: bee, cryptoleslie, degeri, Dustorf, elian, kozel, raedah, richardred, s\_ben
+* writing and editing: Akin, bee, cryptoleslie, degeri, Dustorf, elian, kozel, raedah, richardred, s\_ben
 * reviews and feedback: arij, chappjc, davecgh, emiliomann, jholdstock, jy-p, lukebp
 * title image: saender
