--- a/journal/201908.md
+++ b/journal/201908.md
@@ -47,7 +47,7 @@ A new [RPC](https://github.com/decred/dcrwallet/pull/1522) has been added that a
 
 Code maintenance: updated to use the new modules in dcrd and [removed](https://github.com/decred/dcrwallet/pull/1531) usages of old modules, [improved](https://github.com/decred/dcrwallet/pull/1539) compatibility with Go 1.13 errors.
 
-Work has begun to add [support](https://github.com/decred/dcrwallet/pull/1541) for creating CoinJoin transactions that support split ticket buying, as well as mixing of individual mix change outputs into smaller standard denominations.
+Work has begun to add [support](https://github.com/decred/dcrwallet/pull/1541) for creating CoinJoin transactions for ticket purchasing "split" transactions, as well as mixing of individual mix change outputs into smaller standard denominations.
 
 [Decrediton](https://github.com/decred/decrediton): UI tweaks, bug fixes, code cleanup.
 
@@ -335,7 +335,7 @@ In context of discussing the market maker proposals, [CoinMarketBook](https://co
 
 ## Relevant External
 
-Blockstream have [announced](https://blockstream.com/2019/08/08/en-mining-launch/) their Bitcoin mining operations (which started in 2017), with sites in Canada (Quebec) and Georgia (USA) that host their own machines plus those of their clients. Blockstream also announced a new mining pool, the first production mining pool to use the [BetterHash](https://bitcoinmagazine.com/articles/betterhash-protocol-lets-pool-miners-regain-control-over-their-hash-power) protocol. BetterHash allows individual miners to choose which transactions to include in the blocks they find, which would make it significantly more difficult for mining pool operators to use their pool's hashrate maliciously.
+Blockstream have [announced](https://blockstream.com/2019/08/08/en-mining-launch/) their Bitcoin mining operations (which started in 2017), with sites in Quebec (Canada) and Georgia (USA) that host their own machines plus those of their clients. Blockstream also announced a new mining pool, the first production mining pool to use the [BetterHash](https://bitcoinmagazine.com/articles/betterhash-protocol-lets-pool-miners-regain-control-over-their-hash-power) protocol. BetterHash allows individual miners to choose which transactions to include in the blocks they find, which would make it significantly more difficult for mining pool operators to use their pool's hashrate maliciously.
 
 Braiins have [announced](https://bitcoinmagazine.com/articles/with-stratum-v2-braiins-plans-big-overhaul-in-pooled-bitcoin-mining) that the open source Stratum mining protocol V2 will incorporate similar functionality inspired by BetterHash, allowing pools to be configured so that miners can choose transactions and version bits for their proposals directly.
 
