--- a/journal/201908.md
+++ b/journal/201908.md
@@ -6,10 +6,10 @@ _Image: Key Symmetry by @saender. When everything is aligned, big things are bor
 
 Major news of August:
 
-* The privacy feature which Company 0 had been working on privately was [revealed](https://blog.decred.org/2019/08/28/Iterating-Privacy/), an initial [implementation](https://github.com/decred/cspp/) was released, and the first mixes were [observed](https://twitter.com/decredproject/status/1167269901293297664) on mainnet. See Privacy section below.
-* Development of the DEX (Decred Decentralized Exchange) has [commenced](https://github.com/decred/dcrdex), after a [proposal](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) led by  @chappjc and @buck54321 for up to $230,000 in funding was approved (90% support).
-* The percentage of circulating DCR locked in PoS tickets broke [above 50%](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=jz00c7tl-k07gzdll&bin=day&axis=time) for the first time on Aug 15. This, along with the rising ticket price, indicates that the confidence of Decred holders is increasing over time, as more holders opt to time-lock their DCR to participate in governance.
-* Decred stakeholders [signalled](https://proposals.decred.org/proposals/30822c16533890abc6e243eb6d12264b207c3923c14af42cd9b883e71c7003cd) that they wish to fund a market maker to address liquidity issues (87% approval). Voting for the proposals from i2 Trading, Grapefruit Trading and Tantra Labs started on Sep 4 and is competitive, all 3 proposals in the {41-58}% range at time of publication. See Governance section for more details.
+* The privacy feature which Company 0 had been working on privately was revealed, an initial implementation was released, and the first mixes were observed on mainnet. See Privacy section below.
+* Development Decred's decentralized exchange has commenced, after a proposal led by  @chappjc and @buck54321 for up to $230,000 in funding was approved (90% support).
+* The percentage of circulating DCR locked in PoS tickets broke above 50% for the first time on Aug 15. This, along with the rising ticket price, indicates that the confidence of Decred holders is increasing over time, as more holders opt to time-lock their DCR to participate in governance.
+* Decred stakeholders signalled that they wish to fund a market maker to address liquidity issues (87% approval). Voting for the proposals from i2 Trading, Grapefruit Trading and Tantra Labs started on Sep 4 and is competitive, all 3 proposals in the {41-58}% range at time of publication. See Governance section for more details.
 
 ## Privacy
 
