--- a/journal/201911.md
+++ b/journal/201911.md
@@ -86,6 +86,8 @@ In November the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4Dh
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
+https://www.blockcommons.red/publication/mm-tracking-1/ {or in Markets?}
+
 ## Network
 
 {cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
@@ -216,6 +218,10 @@ In November DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average d
 
 https://blog.coinbase.com/how-coinbase-views-proof-of-work-security-f4ba1a139da0
 
+MicroBT (maker of Whatsminer D1, one of the current top Decred miners) CEO arrest https://insidebitcoins.com/news/chinese-police-conduct-snap-raid-of-microbt-premises-arrests-ceo/242367
+
+Bug in Zcash implementation [leaked metadata](https://duke.leto.net/2019/10/01/zcash-metadata-leakage-cve-2019-16930.html) and allowed to link IP addresses to Zcash shielded addresses (_missed in Oct_). From the developer who discovered it: "All people who use zaddrs and who have shared zaddrs with 3rd parties. (...) Consider your IP address and geo-location information associated with it as tied to your zaddr.". The bug was copied from Bitcoin Core codebase and introduced in Zcash in 2016. The leak was fixed in v2.0.7-3, although the [security announcement](https://z.cash/support/security/announcements/security-announcement-2019-09-24/) just recommended to upgrade immediately without any details. A number of project inheriting Zcash code is affected as well. This shows that privacy tech is very delicate and requires less error-prone programming approach, extremely thorough review and testing.
+
 {governance, funding, chain forks, community forks, controversy}
 
 ZEC trademark:
@@ -233,11 +239,33 @@ Huge XLM burn https://www.stellar.org/blog/sdfs-next-steps
 
 BitMEX leaked their email database "by accident". Software is hard https://twitter.com/jchervinsky/status/1190171229031936000
 
+Delisting of privacy coins such as Monero, Zcash, Dash and others (_missed in Sep_):
+
+- OKEx Korea
+  - announced Sep 10 https://cointelegraph.com/news/report-okex-delisting-monero-dash-privacy-cryptos-over-fatf-demands
+  - implemented Oct 10, although delisting of DASH and ZEC was halted https://cointelegraph.com/news/cryptocurrency-exchange-okex-delists-xmr-dash-zec-zen-sbtc
+  - https://www.coindesk.com/okex-korea-reviewing-decision-to-delist-privacy-coins-zcash-and-dash
+- Upbit announced Sep 20 https://cointelegraph.com/news/upbit-exchange-delists-privacy-coins-due-to-money-laundering-concerns
+
+Virgin Bitcoins are 10-30% more expensive than Bitcoins with history, according to a [blog](https://medium.com/@official_83664/what-are-virgin-bitcoins-and-where-can-i-buy-them-d6eab0f669e0) by Vertex Marketplace. This should be no surprise to anyone who understands fungibility.
+
+Bittrex has [adopted](https://www.coindesk.com/bittrex-chainalysis-kyt) Chainalysis [Know Your Transaction](https://blog.chainalysis.com/reports/real-time-alerts-press-release) software that monitors 15 cryptoassets for suspicious activity in real-time. (_missed in Sep_).
+
 {other: regulations, security, fun}
+
+U.S. Federal Reserve is [hiring](https://cointelegraph.com/news/us-federal-reserve-hiring-new-manager-to-research-digital-currencies) a manager to research digital currencies for up to $250K a year.
+
+Head of the Federal Reserve [admitted](https://cointelegraph.com/news/got-bitcoin-us-fed-warns-national-debt-growth-is-not-sustainable) that national debt growing faster than nominal GDP is "not sustainable" shortly after U.S. national debt exceeded $23 trillion. Ironically, he said it's not the Fed's job to fix it, despite the fact that the Fed is making the debt drug much more accessible by cutting rates and giving loans to large banks (and guess where the loaned money comes from).
 
 Czech Central Bank forbids to use the word "coin" https://www.bitcoininsider.org/article/77479/czech-central-bank-prepares-fine-calling-physical-bitcoins-coins
 
 During October [protests](https://twitter.com/dalalmawad/status/1186705664229466112) in Lebanon the banks were [closed](https://www.cnbc.com/2019/10/23/lebanon-protests-fears-of-a-cash-crisis-as-banks-remain-shut.html) for two weeks for safety reasons. Upon reopening on Nov 1 capital controls were [established](https://www.counterpunch.org/2019/11/07/how-unofficial-capital-controls-stopped-a-run-on-the-banks-in-lebanon/) limiting daily withdrawals and transfers abroad.
+
+Trojan-enabled version of Tor browser was [targeting](https://www.welivesecurity.com/2019/10/18/fleecing-onion-trojanized-tor-browser/) Bitcoin users, discovered by ESET. The trojan version was spreading from `tor-browser[.]org` and `torproect[.]org` domains.
+
+Zcash fake wallet https://twitter.com/mineZcash/status/1185908172105453568 (_missed in Oct_).
+
+Another fake Decred wallet was noticed, reported and quickly removed by GitHub. The account named `decreds` and the way the fake [v1.5.0 release](https://archive.today/ivVRO) was published looked surprisingly similar to previous "v1.5.0 Mandatory Update" by `DecredCoin` covered in [September](201909.md). Looks like hackers can't wait for v1.5 final. We too! If you encounter anything like this on GitHub or elsewhere, please report it to the platform immediately, and let the community know too to minimize possible damage.
 
 If you couldn't upload enough of your data to Google, it is [rumored](https://www.cnbc.com/2019/11/13/google-reportedly-offering-checking-accounts-next-year.html) to get into the banking business and offer checking accounts next year. Project codename "Cache" is a bit ironical because in computing caches are often wiped.
 
