--- a/journal/201911.md
+++ b/journal/201911.md
@@ -8,6 +8,10 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 - LN ticket splitting
 
+## RC2
+
+{changes since rc1}
+
 ## LN + tickets plan coverage
 
 {in its own section?}
@@ -27,6 +31,8 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 [Politeia](https://github.com/decred/politeia): {}
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
+
+- progress of address reuse elimination
 
 [dcrpool](https://github.com/decred/dcrpool): {}
 
@@ -49,6 +55,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 Other:
 
 - reproducible builds progress https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$157308464734953aRCth:decred.org
+- rpi https://twitter.com/karamblez/status/1197676296240861186 https://github.com/karamble/dcraspaper
 
 Dev activity stats for November: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
 
@@ -170,7 +177,9 @@ Selected articles:
   - tweet https://twitter.com/ForbesCrypto/status/1193953360422080512
 - https://medium.com/@dlefebvr/decreds-name-sucks-and-i-m-glad-853af487034e
 - https://medium.com/@NoahPierau/what-is-decred-dcr-why-was-this-cryptocurrency-created-4e5cae085bc7
-
+- https://cointelegraph.com/news/secrets-they-missed-at-devcon-what-its-really-like-in-a-working-dao
+- {new pieces from BlackBear}
+- https://cryptotradernews.com/technology/our-data-privacy-is-under-attack-decred-is-fighting-back/
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
@@ -205,6 +214,7 @@ Selected Twitter discussions:
 - dcrstakey is back https://twitter.com/dcrstakey/status/1193758944587657216
 - nice distillation https://twitter.com/DCRtheSOV/status/1194480106892185601
 - #decreddancechallenge
+- https://twitter.com/_Checkmatey_/status/1197225489959718913
 
 ## Markets
 
@@ -221,6 +231,12 @@ https://blog.coinbase.com/how-coinbase-views-proof-of-work-security-f4ba1a139da0
 MicroBT (maker of Whatsminer D1, one of the current top Decred miners) CEO arrest https://insidebitcoins.com/news/chinese-police-conduct-snap-raid-of-microbt-premises-arrests-ceo/242367
 
 Bug in Zcash implementation [leaked metadata](https://duke.leto.net/2019/10/01/zcash-metadata-leakage-cve-2019-16930.html) and allowed to link IP addresses to Zcash shielded addresses (_missed in Oct_). From the developer who discovered it: "All people who use zaddrs and who have shared zaddrs with 3rd parties. (...) Consider your IP address and geo-location information associated with it as tied to your zaddr.". The bug was copied from Bitcoin Core codebase and introduced in Zcash in 2016. The leak was fixed in v2.0.7-3, although the [security announcement](https://z.cash/support/security/announcements/security-announcement-2019-09-24/) just recommended to upgrade immediately without any details. A number of project inheriting Zcash code is affected as well. This shows that privacy tech is very delicate and requires less error-prone programming approach, extremely thorough review and testing.
+
+{privacy}
+
+https://medium.com/dragonfly-research/breaking-mimblewimble-privacy-model-84bcd67bfe52
+
+https://www.unknown.fund/press-release great example that given a fair and open money system, sooner or later people begin to organize to fund great things.
 
 {governance, funding, chain forks, community forks, controversy}
 
@@ -251,11 +267,15 @@ Virgin Bitcoins are 10-30% more expensive than Bitcoins with history, according 
 
 Bittrex has [adopted](https://www.coindesk.com/bittrex-chainalysis-kyt) Chainalysis [Know Your Transaction](https://blog.chainalysis.com/reports/real-time-alerts-press-release) software that monitors 15 cryptoassets for suspicious activity in real-time. (_missed in Sep_).
 
+New and "improved" version of CoinDesk doesn't show any content unless you enable javascript and certain browser features. For readers that don't want to enable them, this means all past content (that was not archived) is no longer accessible. For those who will keep the features enabled this means more browser fingerprinting and attack vectors. For CoinDesk it allows to be less accountable because this way of client-side rendering actively resists the creation of page snapshots by web notaries like web.archive.org or archive.today.
+
 {other: regulations, security, fun}
 
 U.S. Federal Reserve is [hiring](https://cointelegraph.com/news/us-federal-reserve-hiring-new-manager-to-research-digital-currencies) a manager to research digital currencies for up to $250K a year.
 
 Head of the Federal Reserve [admitted](https://cointelegraph.com/news/got-bitcoin-us-fed-warns-national-debt-growth-is-not-sustainable) that national debt growing faster than nominal GDP is "not sustainable" shortly after U.S. national debt exceeded $23 trillion. Ironically, he said it's not the Fed's job to fix it, despite the fact that the Fed is making the debt drug much more accessible by cutting rates and giving loans to large banks (and guess where the loaned money comes from).
+
+{epic} https://www.coindesk.com/trump-administration-popped-2017-bitcoin-bubble-ex-cftc-chair-says (missed in October)
 
 Czech Central Bank forbids to use the word "coin" https://www.bitcoininsider.org/article/77479/czech-central-bank-prepares-fine-calling-physical-bitcoins-coins
 
