--- a/journal/201911.md
+++ b/journal/201911.md
@@ -107,11 +107,15 @@ Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. Th
 
 {recap of ticket price action if it was interesting}
 
+Ticket price broke 150 after a 10-day streak of 19 increases.
+
 {helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now }
 
 Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per {new source?}. Version distribution: {vx.y.z: n% (+n%), ...}.
 
 {any interesting analysis or events in the network}
+
+Block 400k https://www.reddit.com/r/decred/comments/e0yvyb/block_400000/
 
 ## Mining
 
@@ -179,7 +183,10 @@ Selected articles:
 - https://medium.com/@NoahPierau/what-is-decred-dcr-why-was-this-cryptocurrency-created-4e5cae085bc7
 - https://cointelegraph.com/news/secrets-they-missed-at-devcon-what-its-really-like-in-a-working-dao
 - {new pieces from BlackBear}
+  - https://medium.com/@imagnusholdings/decred-x-part-ix-sub-economics-e3b0a5e948e1
 - https://cryptotradernews.com/technology/our-data-privacy-is-under-attack-decred-is-fighting-back/
+- https://cryptotradernews.com/cryptocurrency/ctn-exclusive-inside-decred-with-co-founder-jake-yocom-piat/
+
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
@@ -215,6 +222,7 @@ Selected Twitter discussions:
 - nice distillation https://twitter.com/DCRtheSOV/status/1194480106892185601
 - #decreddancechallenge
 - https://twitter.com/_Checkmatey_/status/1197225489959718913
+- https://twitter.com/lukebp_/status/1199134933773500416 {quote best bit}
 
 ## Markets
 
@@ -273,7 +281,17 @@ New and "improved" version of CoinDesk doesn't show any content unless you enabl
 
 U.S. Federal Reserve is [hiring](https://cointelegraph.com/news/us-federal-reserve-hiring-new-manager-to-research-digital-currencies) a manager to research digital currencies for up to $250K a year.
 
-Head of the Federal Reserve [admitted](https://cointelegraph.com/news/got-bitcoin-us-fed-warns-national-debt-growth-is-not-sustainable) that national debt growing faster than nominal GDP is "not sustainable" shortly after U.S. national debt exceeded $23 trillion. Ironically, he said it's not the Fed's job to fix it, despite the fact that the Fed is making the debt drug much more accessible by cutting rates and giving loans to large banks (and guess where the loaned money comes from).
+U.S. Fed [announced](https://www.newyorkfed.org/markets/opolicy/operating_policy_191114) that they will "offer three additional term repo operations with longer maturities that extend past the end of 2019". This measure is an addition to existing 1-day and 14-day repo operations and purchases of Treasury bills.
+
+If you ever wondered who gets the repo money, you will have to [wait](http://gata.org/node/19583) two years.
+
+The Fed itself [admitted](https://realinvestmentadvice.com/powells-fantasy-the-economy-should-grow-faster-than-debt/) that U.S. national debt growing faster than nominal GDP is "not sustainable", shortly after the debt exceeded $23 trillion. Interestingly, he said it's not the Fed's job to fix it. The debt has two sides. On the one side, someone is creating demand by taking more and more debt. On the other side, the Fed is making the debt drug much more accessible by cutting rates, lending money to banks and "purchasing" assets like stocks and bonds. Something nobody wants to talk about is where the this money comes from.
+
+U.S. companies are [stacking up cash](https://www.axios.com/businesses-spending-indicators-recession-533481fc-dba7-4b5c-add4-c11628c335bc.html) to prepare for an economic downturn. A notable quote from the Axios story: "Data from the Investment Company Institute shows that even though the stock market has risen by nearly 25% this year, investors have been net sellers of stocks, pulling $100 billion out of equity funds.". The "fun" part in these dynamics where investors are [moving to cash](https://www.bloomberg.com/news/articles/2019-11-12/world-s-rich-readying-for-major-stock-sell-off-ubs-wealth-says) is that while it saves their value from more risky assets and negative interest rates, it will still be diluted by endless printing of fiat money.
+
+Global debt is hitting all-time highs. The numbers vary by the source: $188 trillion and 230% of the world output figure comes from [IMF chief](https://www.ibtimes.com/global-debt-surges-record-high-188-tn-imf-chief-2861715), while $250 trillion and 320% of world output figure is from [Axios](https://www.axios.com/capital-markets-eye-world-soaring-debt-400f9f37-46b5-45ad-9487-c09ba8958c09.html), which cited Institute of International Finance.
+
+Certain physical security providers report an increased [demand](https://www.bloomberg.com/news/articles/2019-11-20/world-s-rich-are-rattled-and-looking-for-old-fashioned-security) for safe desit boxes to store precious metals, cash and cryptocurrency. The motives cited are fears of a global recession, avoidance of negative interest rates and natural disasters.
 
 {epic} https://www.coindesk.com/trump-administration-popped-2017-bitcoin-bubble-ex-cftc-chair-says (missed in October)
 
