--- a/journal/201911.md
+++ b/journal/201911.md
@@ -226,6 +226,7 @@ Selected Twitter discussions:
 - #decreddancechallenge
 - https://twitter.com/_Checkmatey_/status/1197225489959718913
 - https://twitter.com/lukebp_/status/1199134933773500416 {quote best bit}
+- https://twitter.com/PermabullNino/status/1195356846778912769 + interesting note about switching costs by @ammarooni
 
 ## Markets
 
@@ -259,6 +260,8 @@ ZEC trademark:
   - {here or in Media?}
 
 Huge XLM burn https://www.stellar.org/blog/sdfs-next-steps
+
+Tezos supply-demand dynamics {worthy?} https://twitter.com/john_iller/status/1197984641761923073
 
 {DEX}
 
@@ -306,7 +309,15 @@ Czech Central Bank forbids to use the word "coin" https://www.bitcoininsider.org
 
 During October [protests](https://twitter.com/dalalmawad/status/1186705664229466112) in Lebanon the banks were [closed](https://www.cnbc.com/2019/10/23/lebanon-protests-fears-of-a-cash-crisis-as-banks-remain-shut.html) for two weeks for safety reasons. Upon reopening on Nov 1 capital controls were [established](https://www.counterpunch.org/2019/11/07/how-unofficial-capital-controls-stopped-a-run-on-the-banks-in-lebanon/) limiting daily withdrawals and transfers abroad.
 
+GitHub has [removed](https://techcrunch.com/2019/10/30/github-removes-tsunami-democratics-apk-after-a-takedown-order-from-spain/) the APK of an app for organizing protests in Catalonia, acting on a court takedown request sent by Spain's national police force with military status.
+
 Trojan-enabled version of Tor browser was [targeting](https://www.welivesecurity.com/2019/10/18/fleecing-onion-trojanized-tor-browser/) Bitcoin users, discovered by ESET. The trojan version was spreading from `tor-browser[.]org` and `torproect[.]org` domains.
+
+Monero website compromised {pick best link(s)}:
+
+- https://thehackernews.com/2019/11/hacking-monero-cryptocurrency.html
+- https://hotforsecurity.bitdefender.com/blog/cryptocurrency-monero-website-hacked-original-binaries-replaced-21805.html
+- https://arstechnica.com/information-technology/2019/11/official-monero-website-is-hacked-to-deliver-currency-stealing-malware/
 
 Zcash fake wallet https://twitter.com/mineZcash/status/1185908172105453568 (_missed in Oct_).
 
