add people numbers

--- a/journal/201911.md
+++ b/journal/201911.md
@@ -76,16 +76,16 @@ Congratulations to {n} contributors listed on [decred.org](https://decred.org/co
 Community stats:
 
 - Politeia users: {} (+{})
-- Twitter followers: {} (+{})
-- Reddit subscribers: {} (+{})
-- Matrix users: {} (+{})
-- Slack users: {} (+{})
+- Twitter followers: 40,641 (+9)
+- Reddit subscribers: 9,703 (+47)
+- Matrix users: 474 (+18)
+- Slack users: 6,872 (+14)
 - Discord users: {}, verified to post: {}
-- Telegram users: {} (+{})
-- YouTube subscribers: {} (+{})
-- Facebook followers: {} (+{}), likes: {} (+{})
-- LinkedIn followers: {} (+{})
-- GitHub dcrd stars: {} (+{}), forks: {} (+{})
+- Telegram users: 2,903 (-63)
+- YouTube subscribers: 3,920 (+60)
+- Facebook followers: 3,307 (+11), likes: 3,027 (+8)
+- LinkedIn followers: 662 (+24)
+- GitHub dcrd stars: 520 (+3), forks: 1,400(+0)
 
 ## Governance
 
