--- a/journal/201911.md
+++ b/journal/201911.md
@@ -158,13 +158,23 @@ https://xaur.github.io/writings/posts/20191127-marketing-strategies.html (discus
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+- Nov 4-7 - [Web Summit](https://websummit.com/) - Lisbon, Portugal. Decred team ran a [stand](https://twitter.com/marco_peereboom/status/1191651269640888320) for 2 days. Very [few](https://twitter.com/NoahPierau/status/1192045467435188224) blockchain projects have secured speaking slots, likely due to the bear market. @moo31337 [talked](https://twitter.com/decredproject/status/1192469998175948801) on the stage with representatives of the finance industry on the topic "Can you really trust your bank?" ([video](https://vimeo.com/375884648) + hilarious [cut](https://www.youtube.com/watch?v=0Bq48X3cO_s) by @Exitus). (photos: [1](https://twitter.com/JamieHoldstock/status/1191760511878279168), [2](https://twitter.com/NoahPierau/status/1192056049764904960), [3](https://twitter.com/kakalordao/status/1192131145141555201), [4](https://twitter.com/marco_peereboom/status/1192990143822454784))
+- Nov 6 - [Bitcoin and Blockchains Meetup](https://www.facebook.com/events/1444182132424731/) - Oaxaca, Mexico. {@evok3d?}
+- Nov 6 - [Decred Meetup](https://twitter.com/amxromero/status/1192241858816217089) - Medellín, Colombia. @elian and @victorarubin talked to around 35 people of age 20-50 who asked amazing questions about Politeia, Decred's plans for Latam, PoS attack vectors and smart contracts. (photos: [1](https://twitter.com/Decred_ES/status/1192236147201712128), [2](https://twitter.com/victorarubin/status/1192262347118858241))
+- Nov 7 - [Journey 4.0](https://twitter.com/legal_medellin/status/1189918302061187073) - Medellín, Colombia. {any info? @elian?}
+- Nov 8 - [World Blockchain Conference](https://www.8btc.com/wbc-2019/) - Jiaxing, China. @Dominic has represented Decred and talked about DAO and privacy features. There have been reports of him being turned into a [cyborg](https://twitter.com/wanbihou/status/1192484367626424321) at the party preceding the event. Community members in the region are advised to follow standard protocols and take necessary precautions. Another notable event is video footage of [dancing](https://twitter.com/wanbihou/status/1193154668601327617) that sparked [#DecredDanceChallenge](https://twitter.com/hashtag/DecredDanceChallenge). (photos: [1](https://twitter.com/wanbihou/status/1192806081568722944), [2](https://twitter.com/wanbihou/status/1193218449721311233))
+- Nov 15-16 - [CriptoBlock](https://criptoblock.com.br/) - São Paulo, Brazil. @Rhama and @girino gave talks about Decred. Although the organizers worked hard, only around 250 people attended out of 1000-1200 expected, reflecting today's market. Decred was a bronze sponsor.
+- Nov 16 - [BitConf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. {how did it go? @emiliomann?}
+- Nov 21 - [Africa Blockchain Summit](https://www.africablockchainsummit.com/agenda.html) - Rabat, Morocco. @arij took the opportunity to discover the point of view of view of centralized organizations and to represent Decred to a wide variety of people from different backgrounds. ([report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$157443668448708migov:decred.org), [photos](https://twitter.com/DecredArabia/status/1197622992806776833))
+- Nov 21 - [Africa Fintech Summit](https://africafintechsummit.com/addis/) - Addis Ababa, Ethiopia. @akinsawyerr spoke on a blockchain panel and made a few valuable connections. Check the full report and photos [here](https://github.com/decredcommunity/events/blob/master/reports/20191121-africa-fintech-summit-addis-ababa-ethiopia.md). A week later he talked about Decred and the trip at [@VOANews](https://twitter.com/AkinSawyerr/status/1199724552617709568).
+- Nov 21 - Decred Meetup - Berlin, Germany. Hosted by BlueYard. {did it happen? @Haon?}
+- Nov 21 - [Blockchain Conference](https://www.eventbrite.com.ar/e/conferencia-blockchain-tickets-81397410847) - Veracruz, Mexico. The event took place in the largest technology university in the city. {any info? @luisantoniocrag @francov_}
 
 Upcoming:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{announcements in Events domain}
+- 5-year anniversary event for the Bitcoin Vietnam community. {@joshuam what is the date, city and any extra info?}
+- Dec 4 - [Decred Demo](https://www.meetup.com/BlockchainMelbourne/events/266857183/) - Melbourne, Australia. @eSizeDave will showcase Decrediton and Politeia. Hosted by Blockchain Centre. Speakers must not be intoxicated.
+- Jan 29-31 - [Crypto 101 Online Summit](https://www.crypto2020summit.com/) - web. @lukebp will give an overview of Decred's plans for 2020.
 
 ## Media
 
@@ -310,6 +320,8 @@ Czech Central Bank forbids to use the word "coin" https://www.bitcoininsider.org
 During October [protests](https://twitter.com/dalalmawad/status/1186705664229466112) in Lebanon the banks were [closed](https://www.cnbc.com/2019/10/23/lebanon-protests-fears-of-a-cash-crisis-as-banks-remain-shut.html) for two weeks for safety reasons. Upon reopening on Nov 1 capital controls were [established](https://www.counterpunch.org/2019/11/07/how-unofficial-capital-controls-stopped-a-run-on-the-banks-in-lebanon/) limiting daily withdrawals and transfers abroad.
 
 GitHub has [removed](https://techcrunch.com/2019/10/30/github-removes-tsunami-democratics-apk-after-a-takedown-order-from-spain/) the APK of an app for organizing protests in Catalonia, acting on a court takedown request sent by Spain's national police force with military status.
+
+CEO of Mongoila-based IDAX exchange has [disappeared](https://idax.zendesk.com/hc/en-us/articles/360037327571-Urgent-announcement-about-current-situation-of-IDAX-Global) together with keys from exchange's cold storage. Five days prior to that the exchange has announced withdrawal [problems](https://idax.zendesk.com/hc/en-us/articles/360036736211-Announcement-of-IDAX-withdrawal-channel-congestion) and that it will no longer serve users in [China](https://idax.zendesk.com/hc/en-us/articles/360036736691-IDAX-no-longer-provide-services-for-users-in-China). This reminds the case of Canadian QuadrigaCX whose CEO had mysteriously disappeared, also with the keys. The takeaways here are: have several backup people with the keys if you run an important service, screen your exchange and ideally, contribute to replacing custodial exchnages with [non-custodial](https://github.com/decred/dcrdex) ones.
 
 Trojan-enabled version of Tor browser was [targeting](https://www.welivesecurity.com/2019/10/18/fleecing-onion-trojanized-tor-browser/) Bitcoin users, discovered by ESET. The trojan version was spreading from `tor-browser[.]org` and `torproect[.]org` domains.
 
